--- a/src/demo/app.component.html
+++ b/src/demo/app.component.html
@@ -12,7 +12,7 @@
     <div class="col-sm-9">
 
       <bd2-ngx-hbox-plot
-        [data]="data"
+        [data]="data" [labels]="labels"
       >
       </bd2-ngx-hbox-plot>
       {{detection()}}
