Label rendering with delay so the problem with hidden parrent element will not manifest. Simplified hiding, with labels delay simple hidden attribute is enough to solve the problem

--- a/src/demo/app.component.html
+++ b/src/demo/app.component.html
@@ -11,10 +11,12 @@
   <div class="row">
     <div class="col-sm-9">
 
+      <div [hidden]="isHidden">
       <bd2-ngx-hbox-plot
         [data]="data" [labels]="labels" [hidden]="isHidden"
       >
       </bd2-ngx-hbox-plot>
+      </div>
       {{detection()}}
     </div>
     <div class="col-sm-3">
