--- a/projects/bd2-ngx-hboxplot-demo/src/app/app.component.html
+++ b/projects/bd2-ngx-hboxplot-demo/src/app/app.component.html
@@ -8,9 +8,9 @@
 
       <div>
         <p>
-          Simple demo of horizontal box plot.
+          Simple demo of horizontal box plot. V 1.10.0
         </p>
-        <p>Generated trigers generation of multiple data sets to illustrate changes.</p>
+        <p>Generated triggers generation of multiple data sets to illustrate changes.</p>
       </div>
       <hr>
     </div>
